--- a/pbt_project.yml
+++ b/pbt_project.yml
@@ -1,6 +1,6 @@
 name: randy.yost
 description: Balanced
-version: v1.3.0-SNAPSHOT
+version: v1.2.3
 author: 6y9sysbc.v4wy08rl@axfuocut.com
 language: scala
 buildSystem: ''
